--- a/JiraGitHubPRCreator.csproj
+++ b/JiraGitHubPRCreator.csproj
@@ -80,8 +80,10 @@
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
     <Compile Include="GitHubWrapper.cs" />
+    <Compile Include="LinkedPrCreator.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="BranchDefinition.cs" />
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
     </EmbeddedResource>
