--- a/JiraGitHubPRCreator.csproj
+++ b/JiraGitHubPRCreator.csproj
@@ -73,11 +73,11 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Form1.cs">
+    <Compile Include="JiraGitHubPRCreator.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Form1.Designer.cs">
-      <DependentUpon>Form1.cs</DependentUpon>
+    <Compile Include="JiraGitHubPRCreator.Designer.cs">
+      <DependentUpon>JiraGitHubPRCreator.cs</DependentUpon>
     </Compile>
     <Compile Include="GitHub\GitHubWrapper.cs" />
     <Compile Include="GitHub\LinkedPrCreator.cs" />
@@ -88,8 +88,8 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="GitHub\BranchDefinition.cs" />
-    <EmbeddedResource Include="Form1.resx">
-      <DependentUpon>Form1.cs</DependentUpon>
+    <EmbeddedResource Include="JiraGitHubPRCreator.resx">
+      <DependentUpon>JiraGitHubPRCreator.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
