--- a/JiraGitHubPRCreator.Core/JiraGitHubPRCreator.Core.csproj
+++ b/JiraGitHubPRCreator.Core/JiraGitHubPRCreator.Core.csproj
@@ -9,8 +9,9 @@
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>JiraGitHubPRCreator.Core</RootNamespace>
     <AssemblyName>JiraGitHubPRCreator.Core</AssemblyName>
-    <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
+    <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
