--- a/JiraGitHubPRCreator.Web/Web.config
+++ b/JiraGitHubPRCreator.Web/Web.config
@@ -9,6 +9,8 @@
     <add key="webpages:Enabled" value="false" />
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
+    <add key="ClientId" value="INSERT_CLIENT_ID_HERE"/>
+    <add key="ClientSecret" value="SECRET"/>
   </appSettings>
   <!--
     For a description of web.config changes see http://go.microsoft.com/fwlink/?LinkId=235367.
